[gd_scene load_steps=12 format=3 uid="uid://ch67xec0i6ulx"]

[ext_resource type="TileSet" uid="uid://dw3ktkni1qm1w" path="res://tileset.tres" id="1_2lcah"]
[ext_resource type="Script" path="res://level.gd" id="2_a1swu"]
[ext_resource type="Script" path="res://Bridge.gd" id="3_7m2jr"]
[ext_resource type="Texture2D" uid="uid://nq7wy07f7eff" path="res://p_vehicles.png" id="4_22n7y"]
[ext_resource type="Texture2D" uid="uid://cngj2e3n1au6w" path="res://spritesheet.png" id="5_ib5mq"]
[ext_resource type="Script" path="res://enemy.gd" id="6_t8jai"]
[ext_resource type="Script" path="res://enemies/EnemySpawner.gd" id="7_d4uah"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_05i8x"]
size = Vector2(320, 512)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_qif6t"]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_j30u2"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(170, -8, 0)
direction = Vector3(-1, 0, 0)
spread = 0.0
initial_velocity_min = 16.0
initial_velocity_max = 16.0
gravity = Vector3(0, 0, 0)
anim_offset_max = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g5jmo"]
size = Vector2(32, 16)

[node name="Level" type="TileMap"]
tile_set = ExtResource("1_2lcah")
format = 2
layer_0/tile_data = PackedInt32Array(-655359, 196608, 2, -589823, 196608, 2, -524287, 196608, 2, -458751, 196608, 2, -393215, 196608, 2, -327679, 196608, 2, -262143, 196608, 2, -196607, 196608, 2, -131071, 196608, 2, -65535, 196608, 2, -655358, 196608, 2, -589822, 196608, 2, -524286, 196608, 2, -458750, 196608, 2, -393214, 196608, 2, -327678, 196608, 2, -262142, 196608, 2, -196606, 196608, 2, -131070, 196608, 2, -65534, 196608, 2, -655357, 196608, 2, -589821, 196608, 2, -524285, 196608, 2, -458749, 196608, 2, -393213, 196608, 2, -327677, 196608, 2, -262141, 196608, 2, -196605, 196608, 2, -131069, 196608, 2, -65533, 196608, 2, -655356, 196608, 2, -589820, 196608, 2, -524284, 196608, 2, -458748, 196608, 2, -393212, 196608, 2, -327676, 196608, 2, -262140, 196608, 2, -196604, 196608, 2, -131068, 196608, 2, -65532, 196608, 2, -655355, 196608, 2, -589819, 196608, 2, -524283, 196608, 2, -458747, 196608, 2, -393211, 196608, 2, -327675, 196608, 2, -262139, 196608, 2, -196603, 196608, 2, -131067, 196608, 2, -65531, 196608, 2, -655354, 196608, 2, -589818, 196608, 2, -524282, 196608, 2, -458746, 196608, 2, -393210, 196608, 2, -327674, 196608, 2, -262138, 196608, 2, -196602, 196608, 2, -131066, 196608, 2, -65530, 196608, 2, -655353, 196608, 2, -589817, 196608, 2, -524281, 196608, 2, -458745, 196608, 2, -393209, 196608, 2, -327673, 196608, 2, -262137, 196608, 2, -196601, 196608, 2, -131065, 196608, 2, -65529, 196608, 2, -655352, 196608, 2, -589816, 196608, 2, -524280, 196608, 2, -458744, 196608, 2, -393208, 196608, 2, -327672, 196608, 2, -262136, 196608, 2, -196600, 196608, 2, -131064, 196608, 2, -65528, 196608, 2, -11927562, 196608, 2, -11862026, 196608, 2, -11796490, 196608, 2, -11730954, 196608, 2, -11665418, 196608, 2, -11599882, 196608, 2, -11534346, 196608, 2, -11468810, 196608, 2, -11403274, 196608, 2, -11337738, 196608, 2, -11272202, 196608, 2, -11206666, 196608, 2, -11141130, 196608, 2, -11075594, 196608, 2, -11010058, 196608, 2, -10944522, 196608, 2, -10878986, 196608, 2, -10813450, 196608, 2, -10747914, 196608, 2, -10682378, 196608, 2, -10616842, 196608, 2, -10551306, 196608, 2, -10485770, 196608, 2, -10420234, 196608, 2, -10354698, 196608, 2, -10289162, 196608, 2, -10223626, 196608, 2, -10158090, 196608, 2, -10092554, 196608, 2, -10027018, 196608, 2, -9961482, 196608, 2, -9895946, 196608, 2, -9830410, 196608, 2, -9764874, 196608, 2, -9699338, 196608, 2, -9633802, 196608, 2, -9568266, 196608, 2, -9502730, 196608, 2, -9437194, 196608, 2, -9371658, 196608, 2, -9306122, 196608, 2, -9240586, 196608, 2, -9175050, 196608, 2, -9109514, 196608, 2, -9043978, 196608, 2, -8978442, 196608, 2, -8912906, 196608, 2, -8847370, 196608, 2, -8781834, 196608, 2, -8716298, 196608, 2, -8650762, 196608, 2, -8585226, 196608, 2, -8519690, 196608, 2, -8454154, 196608, 2, -8388618, 196608, 2, -8323082, 196608, 2, -8257546, 196608, 2, -8192010, 196608, 2, -8126474, 196608, 2, -8060938, 196608, 2, -7995402, 196608, 2, -7929866, 196608, 2, -7864330, 196608, 2, -7798794, 196608, 2, -7733258, 196608, 2, -7667722, 196608, 2, -7602186, 196608, 2, -7536650, 196608, 2, -7471114, 196608, 2, -7405578, 196608, 2, -7340042, 196608, 2, -7274506, 196608, 2, -7208970, 196608, 2, -7143434, 196608, 2, -7077898, 196608, 2, -7012362, 196608, 2, -6946826, 196608, 2, -6881290, 196608, 2, -6815754, 196608, 2, -6750218, 196608, 2, -6684682, 196608, 2, -6619146, 196608, 2, -6553610, 196608, 2, -6488074, 196608, 2, -6422538, 196608, 2, -6357002, 196608, 2, -6291466, 196608, 2, -6225930, 196608, 2, -6160394, 196608, 2, -6094858, 196608, 2, -6029322, 196608, 2, -5963786, 196608, 2, -5898250, 196608, 2, -5832714, 196608, 2, -5767178, 196608, 2, -5701642, 196608, 2, -5636106, 196608, 2, -5570570, 196608, 2, -5505034, 196608, 2, -5439498, 196608, 2, -5373962, 196608, 2, -5308426, 196608, 2, -5242890, 196608, 2, -5177354, 196608, 2, -5111818, 196608, 2, -5046282, 196608, 2, -4980746, 196608, 2, -4915210, 196608, 2, -4849674, 196608, 2, -4784138, 196608, 2, -4718602, 196608, 2, -4653066, 196608, 2, -4587530, 196608, 2, -4521994, 196608, 2, -4456458, 196608, 2, -4390922, 196608, 2, -4325386, 196608, 2, -4259850, 196608, 2, -4194314, 196608, 2, -4128778, 196608, 2, -4063242, 196608, 2, -3997706, 196608, 2, -3932170, 196608, 2, -3866634, 196608, 2, -3801098, 196608, 2, -3735562, 196608, 2, -3670026, 196608, 2, -3604490, 196608, 2, -3538954, 196608, 2, -3473418, 196608, 2, -3407882, 196608, 2, -3342346, 196608, 2, -3276810, 196608, 2, -3211274, 196608, 2, -3145738, 196608, 2, -3080202, 196608, 2, -3014666, 196608, 2, -2949130, 196608, 2, -2883594, 196608, 2, -2818058, 196608, 2, -2752522, 196608, 2, -2686986, 196608, 2, -2621450, 196608, 2, -2555914, 196608, 2, -2490378, 196608, 2, -2424842, 196608, 2, -2359306, 196608, 2, -2293770, 196608, 2, -2228234, 196608, 2, -2162698, 196608, 2, -2097162, 196608, 2, -2031626, 196608, 2, -1966090, 196608, 2, -1900554, 196608, 2, -1835018, 196608, 2, -1769482, 196608, 2, -1703946, 196608, 2, -1638410, 196608, 2, -1572874, 196608, 2, -1507338, 196608, 2, -1441802, 196608, 2, -1376266, 196608, 2, -1310730, 196608, 2, -1245194, 196608, 2, -1179658, 196608, 2, -1114122, 196608, 2, -1048586, 196608, 2, -983050, 196608, 2, -917514, 196608, 2, -851978, 196608, 2, -786442, 196608, 2, -720906, 196608, 2, -655370, 262144, 2, -589834, 196608, 2, -524298, 196608, 2, -458762, 196608, 2, -393226, 196608, 2, -327690, 196608, 2, -262154, 196608, 2, -196618, 196608, 2, -131082, 196608, 2, -65546, 196608, 2, -10, 196608, 2, -1441801, 196608, 2, -1376265, 196608, 2, -1310729, 196608, 2, -1245193, 196608, 2, -1179657, 196608, 2, -1114121, 196608, 2, -1048585, 196608, 2, -983049, 196608, 2, -917513, 196608, 2, -851977, 196608, 2, -786441, 196608, 2, -720905, 196608, 2, -655369, 262144, 2, -589833, 196608, 2, -524297, 196608, 2, -458761, 196608, 2, -393225, 196608, 2, -327689, 196608, 2, -262153, 196608, 2, -196617, 196608, 2, -131081, 196608, 2, -65545, 196608, 2, -9, 196608, 2, -1441800, 196608, 2, -1376264, 196608, 2, -1310728, 196608, 2, -1245192, 196608, 2, -1179656, 196608, 2, -1114120, 196608, 2, -1048584, 196608, 2, -983048, 196608, 2, -917512, 196608, 2, -851976, 196608, 2, -786440, 196608, 2, -720904, 196608, 2, -655368, 262144, 2, -589832, 196608, 2, -524296, 196608, 2, -458760, 196608, 2, -393224, 196608, 2, -327688, 196608, 2, -262152, 196608, 2, -196616, 196608, 2, -131080, 196608, 2, -65544, 196608, 2, -8, 196608, 2, -1441799, 196608, 2, -1376263, 196608, 2, -1310727, 196608, 2, -1245191, 196608, 2, -1179655, 196608, 2, -1114119, 196608, 2, -1048583, 196608, 2, -983047, 196608, 2, -917511, 196608, 2, -851975, 196608, 2, -786439, 196608, 2, -720903, 196608, 2, -655367, 262144, 2, -589831, 196608, 2, -524295, 196608, 2, -458759, 196608, 2, -393223, 196608, 2, -327687, 196608, 2, -262151, 196608, 2, -196615, 196608, 2, -131079, 196608, 2, -65543, 196608, 2, -7, 196608, 2, -1441798, 196608, 2, -1376262, 196608, 2, -1310726, 196608, 2, -1245190, 196608, 2, -1179654, 196608, 2, -1114118, 196608, 2, -1048582, 196608, 2, -983046, 196608, 2, -917510, 196608, 2, -851974, 196608, 2, -786438, 196608, 2, -720902, 196608, 2, -655366, 262144, 2, -589830, 196608, 2, -524294, 196608, 2, -458758, 196608, 2, -393222, 196608, 2, -327686, 196608, 2, -262150, 196608, 2, -196614, 196608, 2, -131078, 196608, 2, -65542, 196608, 2, -6, 196608, 2, -1441797, 196608, 2, -1376261, 196608, 2, -1310725, 196608, 2, -1245189, 196608, 2, -1179653, 196608, 2, -1114117, 196608, 2, -1048581, 196608, 2, -983045, 196608, 2, -917509, 196608, 2, -851973, 196608, 2, -786437, 196608, 2, -720901, 196608, 2, -655365, 262144, 2, -589829, 196608, 2, -524293, 196608, 2, -458757, 196608, 2, -393221, 196608, 2, -327685, 196608, 2, -262149, 196608, 2, -196613, 196608, 2, -131077, 196608, 2, -65541, 196608, 2, -5, 196608, 2, -1441796, 196608, 2, -1376260, 196608, 2, -1310724, 196608, 2, -1245188, 196608, 2, -1179652, 196608, 2, -1114116, 196608, 2, -1048580, 196608, 2, -983044, 196608, 2, -917508, 196608, 2, -851972, 196608, 2, -786436, 196608, 2, -720900, 196608, 2, -655364, 262144, 2, -589828, 196608, 2, -524292, 196608, 2, -458756, 196608, 2, -393220, 196608, 2, -327684, 196608, 2, -262148, 196608, 2, -196612, 196608, 2, -131076, 196608, 2, -65540, 196608, 2, -4, 196608, 2, -1441795, 196608, 2, -1376259, 196608, 2, -1310723, 196608, 2, -1245187, 196608, 2, -1179651, 196608, 2, -1114115, 196608, 2, -1048579, 196608, 2, -983043, 196608, 2, -917507, 196608, 2, -851971, 196608, 2, -786435, 196608, 2, -720899, 196608, 2, -655363, 262144, 2, -589827, 196608, 2, -524291, 196608, 2, -458755, 196608, 2, -393219, 196608, 2, -327683, 196608, 2, -262147, 196608, 2, -196611, 196608, 2, -131075, 196608, 2, -65539, 196608, 2, -3, 196608, 2, -1441794, 196608, 2, -1376258, 196608, 2, -1310722, 196608, 2, -1245186, 196608, 2, -1179650, 196608, 2, -1114114, 196608, 2, -1048578, 196608, 2, -983042, 196608, 2, -917506, 196608, 2, -851970, 196608, 2, -786434, 196608, 2, -720898, 196608, 2, -655362, 262144, 2, -589826, 196608, 2, -524290, 196608, 2, -458754, 196608, 2, -393218, 196608, 2, -327682, 196608, 2, -262146, 196608, 2, -196610, 196608, 2, -131074, 196608, 2, -65538, 196608, 2, -2, 196608, 2, -1507327, 196608, 2, -1441791, 196608, 2, -1376255, 196608, 2, -1310719, 196608, 2, -1245183, 196608, 2, -1179647, 196608, 2, -1114111, 196608, 2, -1048575, 196608, 2, -983039, 196608, 2, -917503, 196608, 2, -851967, 196608, 2, -786431, 196608, 2, -720895, 262144, 2, -1507326, 196608, 2, -1441790, 196608, 2, -1376254, 196608, 2, -1310718, 196608, 2, -1245182, 196608, 2, -1179646, 196608, 2, -1114110, 196608, 2, -1048574, 196608, 2, -983038, 196608, 2, -917502, 196608, 2, -851966, 196608, 2, -786430, 196608, 2, -720894, 262144, 2, -1507325, 196608, 2, -1441789, 196608, 2, -1376253, 196608, 2, -1310717, 196608, 2, -1245181, 196608, 2, -1179645, 196608, 2, -1114109, 196608, 2, -1048573, 196608, 2, -983037, 196608, 2, -917501, 196608, 2, -851965, 196608, 2, -786429, 196608, 2, -720893, 262144, 2, -1507324, 196608, 2, -1441788, 196608, 2, -1376252, 196608, 2, -1310716, 196608, 2, -1245180, 196608, 2, -1179644, 196608, 2, -1114108, 196608, 2, -1048572, 196608, 2, -983036, 196608, 2, -917500, 196608, 2, -851964, 196608, 2, -786428, 196608, 2, -720892, 262144, 2, -1507323, 196608, 2, -1441787, 196608, 2, -1376251, 196608, 2, -1310715, 196608, 2, -1245179, 196608, 2, -1179643, 196608, 2, -1114107, 196608, 2, -1048571, 196608, 2, -983035, 196608, 2, -917499, 196608, 2, -851963, 196608, 2, -786427, 196608, 2, -720891, 262144, 2, -1507322, 196608, 2, -1441786, 196608, 2, -1376250, 196608, 2, -1310714, 196608, 2, -1245178, 196608, 2, -1179642, 196608, 2, -1114106, 196608, 2, -1048570, 196608, 2, -983034, 196608, 2, -917498, 196608, 2, -851962, 196608, 2, -786426, 196608, 2, -720890, 262144, 2, -1507321, 196608, 2, -1441785, 196608, 2, -1376249, 196608, 2, -1310713, 196608, 2, -1245177, 196608, 2, -1179641, 196608, 2, -1114105, 196608, 2, -1048569, 196608, 2, -983033, 196608, 2, -917497, 196608, 2, -851961, 196608, 2, -786425, 196608, 2, -720889, 262144, 2, -1507320, 196608, 2, -1441784, 196608, 2, -1376248, 196608, 2, -1310712, 196608, 2, -1245176, 196608, 2, -1179640, 196608, 2, -1114104, 196608, 2, -1048568, 196608, 2, -983032, 196608, 2, -917496, 196608, 2, -851960, 196608, 2, -786424, 196608, 2, -720888, 262144, 2, -11993079, 196608, 2, -11927543, 196608, 2, -11862007, 196608, 2, -11796471, 196608, 2, -11730935, 196608, 2, -11665399, 196608, 2, -11599863, 196608, 2, -11534327, 196608, 2, -11468791, 196608, 2, -11403255, 196608, 2, -11337719, 196608, 2, -11272183, 196608, 2, -11206647, 196608, 2, -11141111, 196608, 2, -11075575, 196608, 2, -11010039, 196608, 2, -10944503, 196608, 2, -10878967, 196608, 2, -10813431, 196608, 2, -10747895, 196608, 2, -10682359, 196608, 2, -10616823, 196608, 2, -10551287, 196608, 2, -10485751, 196608, 2, -10420215, 196608, 2, -10354679, 196608, 2, -10289143, 196608, 2, -10223607, 196608, 2, -10158071, 196608, 2, -10092535, 196608, 2, -10026999, 196608, 2, -9961463, 196608, 2, -9895927, 196608, 2, -9830391, 196608, 2, -9764855, 196608, 2, -9699319, 196608, 2, -9633783, 196608, 2, -9568247, 196608, 2, -9502711, 196608, 2, -9437175, 196608, 2, -9371639, 196608, 2, -9306103, 196608, 2, -9240567, 196608, 2, -9175031, 196608, 2, -9109495, 196608, 2, -9043959, 196608, 2, -8978423, 196608, 2, -8912887, 196608, 2, -8847351, 196608, 2, -8781815, 196608, 2, -8716279, 196608, 2, -8650743, 196608, 2, -8585207, 196608, 2, -8519671, 196608, 2, -8454135, 196608, 2, -8388599, 196608, 2, -8323063, 196608, 2, -8257527, 196608, 2, -8191991, 196608, 2, -8126455, 196608, 2, -8060919, 196608, 2, -7995383, 196608, 2, -7929847, 196608, 2, -7864311, 196608, 2, -7798775, 196608, 2, -7733239, 196608, 2, -7667703, 196608, 2, -7602167, 196608, 2, -7536631, 196608, 2, -7471095, 196608, 2, -7405559, 196608, 2, -7340023, 196608, 2, -7274487, 196608, 2, -7208951, 196608, 2, -7143415, 196608, 2, -7077879, 196608, 2, -7012343, 196608, 2, -6946807, 196608, 2, -6881271, 196608, 2, -6815735, 196608, 2, -6750199, 196608, 2, -6684663, 196608, 2, -6619127, 196608, 2, -6553591, 196608, 2, -6488055, 196608, 2, -6422519, 196608, 2, -6356983, 196608, 2, -6291447, 196608, 2, -6225911, 196608, 2, -6160375, 196608, 2, -6094839, 196608, 2, -6029303, 196608, 2, -5963767, 196608, 2, -5898231, 196608, 2, -5832695, 196608, 2, -5767159, 196608, 2, -5701623, 196608, 2, -5636087, 196608, 2, -5570551, 196608, 2, -5505015, 196608, 2, -5439479, 196608, 2, -5373943, 196608, 2, -5308407, 196608, 2, -5242871, 196608, 2, -5177335, 196608, 2, -5111799, 196608, 2, -5046263, 196608, 2, -4980727, 196608, 2, -4915191, 196608, 2, -4849655, 196608, 2, -4784119, 196608, 2, -4718583, 196608, 2, -4653047, 196608, 2, -4587511, 196608, 2, -4521975, 196608, 2, -4456439, 196608, 2, -4390903, 196608, 2, -4325367, 196608, 2, -4259831, 196608, 2, -4194295, 196608, 2, -4128759, 196608, 2, -4063223, 196608, 2, -3997687, 196608, 2, -3932151, 196608, 2, -3866615, 196608, 2, -3801079, 196608, 2, -3735543, 196608, 2, -3670007, 196608, 2, -3604471, 196608, 2, -3538935, 196608, 2, -3473399, 196608, 2, -3407863, 196608, 2, -3342327, 196608, 2, -3276791, 196608, 2, -3211255, 196608, 2, -3145719, 196608, 2, -3080183, 196608, 2, -3014647, 196608, 2, -2949111, 196608, 2, -2883575, 196608, 2, -2818039, 196608, 2, -2752503, 196608, 2, -2686967, 196608, 2, -2621431, 196608, 2, -2555895, 196608, 2, -2490359, 196608, 2, -2424823, 196608, 2, -2359287, 196608, 2, -2293751, 196608, 2, -2228215, 196608, 2, -2162679, 196608, 2, -2097143, 196608, 2, -2031607, 196608, 2, -1966071, 196608, 2, -1900535, 196608, 2, -1834999, 196608, 2, -1769463, 196608, 2, -1703927, 196608, 2, -1638391, 196608, 2, -1572855, 196608, 2, -1507319, 196608, 2, -1441783, 196608, 2, -1376247, 196608, 2, -1310711, 196608, 2, -1245175, 196608, 2, -1179639, 196608, 2, -1114103, 196608, 2, -1048567, 196608, 2, -983031, 196608, 2, -917495, 196608, 2, -851959, 196608, 2, -786423, 196608, 2, -720887, 262144, 2, -655351, 196608, 2, -589815, 196608, 2, -524279, 196608, 2, -458743, 196608, 2, -393207, 196608, 2, -327671, 196608, 2, -262135, 196608, 2, -196599, 196608, 2, -131063, 196608, 2, -65527, 196608, 2)
script = ExtResource("2_a1swu")

[node name="LevelEnd" type="Marker2D" parent="."]
position = Vector2(0, -2928)

[node name="Bot" type="Marker2D" parent="."]
position = Vector2(-144, -368)

[node name="Top" type="Marker2D" parent="."]
position = Vector2(144, -2928)

[node name="NextLevelLoadTrigger" type="Area2D" parent="."]
position = Vector2(-160, -208)
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="NextLevelLoadTrigger"]
position = Vector2(160, -2420)
shape = SubResource("RectangleShape2D_05i8x")

[node name="UnloadLevelTrigger" type="Area2D" parent="."]
position = Vector2(-160, -208)
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="UnloadLevelTrigger"]
position = Vector2(160, -3349)
shape = SubResource("RectangleShape2D_05i8x")
debug_color = Color(0.807843, 0.388235, 0.380392, 0.419608)

[node name="Bridge" type="Node2D" parent="."]
position = Vector2(-16, -176)
script = ExtResource("3_7m2jr")

[node name="Vehicles2" type="GPUParticles2D" parent="Bridge"]
z_index = 5
material = SubResource("CanvasItemMaterial_qif6t")
position = Vector2(28, 12)
amount = 16
process_material = SubResource("ParticleProcessMaterial_j30u2")
texture = ExtResource("4_22n7y")
lifetime = 30.0
preprocess = 30.0
visibility_rect = Rect2(-200, -100, 400, 200)

[node name="Vehicles" type="GPUParticles2D" parent="Bridge"]
z_index = 5
material = SubResource("CanvasItemMaterial_qif6t")
position = Vector2(15, 7)
amount = 16
process_material = SubResource("ParticleProcessMaterial_j30u2")
texture = ExtResource("4_22n7y")
lifetime = 30.0
preprocess = 30.0
visibility_rect = Rect2(-200, -100, 400, 200)

[node name="Sunk" type="Sprite2D" parent="Bridge"]
visible = false
z_index = -1
texture = ExtResource("5_ib5mq")
centered = false
region_enabled = true
region_rect = Rect2(80, 48, 32, 16)

[node name="Bridge" type="AnimatableBody2D" parent="Bridge"]
collision_layer = 3
collision_mask = 768
sync_to_physics = false
script = ExtResource("6_t8jai")

[node name="Ok" type="Sprite2D" parent="Bridge/Bridge"]
texture = ExtResource("5_ib5mq")
centered = false
region_enabled = true
region_rect = Rect2(80, 32, 32, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bridge/Bridge"]
position = Vector2(16, 8)
shape = SubResource("RectangleShape2D_g5jmo")

[node name="EnemySpawner" type="Node2D" parent="."]
script = ExtResource("7_d4uah")
